# ctgkit

./: .gitignore  README.md  SPEC.md  __init__.py  alert_strategy.html  models.py  plotting.py  preprocess.py  pyproject.toml  setup.py
benchmark/: .gitignore  calibrate.py  feature_audit.py  fetch_data.py  run_benchmark.py
benchmark/data/: outcomes.csv
benchmark/results/: predictions.csv
ctgkit/: alerts.py  features.py  guidelines.py  io.py  models.py  pipeline.py  plotting.py  preprocess.py  service_config.py  synth.py
examples/: csv_string_to_plot.ipynb  make_sample_data.py  sample_ctg.csv  timestamped_csv_to_plot.ipynb
tests/: helpers.py  test_behaviour.py  test_imports.py  test_smoke.py
