[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ctgkit"
version = "0.1.3"
description = "Fetal heart-rate epoch analysis (decision support only)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
plot = ["matplotlib"]
io = ["pandas"]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["ctgkit*"]
exclude = ["tests*"]
